--- a/component/src/views/chat/messages/messages.css
+++ b/component/src/views/chat/messages/messages.css
@@ -1,4 +1,4 @@
-.messages {
+#messages {
   overflow: auto;
 }
 
